integration_tests/tests/compile/fail_ulogmessages_forward_other.stderr
error: Enum variants must be tuple variants containing exactly one struct type.
 --> tests/compile/fail_ulogmessages_forward_other.rs:8:5
  |
8 |     A(A, A),
  |     ^^^^^^^
