integration_tests/tests/compile/fail_ulogmessages_forward_other.rs
use yule_log::{ULogMessages, ULogData};

#[derive(ULogData)]
pub struct A { value: u64 }

#[derive(ULogMessages)]
pub enum LoggedMessages {
    A(A, A),
}

fn main() {}
